tests/init_state/ref_obligations/mut_ref_write_without_move.err.expected
error: at 5:5: [INIT-DerefPointeeStateMismatch] In function 'f', block 'entry': cannot write into pointee of 'r': pointee must be uninitialized here, but is initialized
   |
 4 |   entry:
 5 |     r.* = 42;
   |     ^^^^^^^^
 6 |     return
   |
